Fixing LESS global layout overflow on mobile (1)

--- a/src/styles/components/gallery.less
+++ b/src/styles/components/gallery.less
@@ -75,8 +75,7 @@
 
 .gallery__locations-list {
     overflow-y: auto;
-    overflow-x: none;
-    height: calc(100vh - 188px);
+    overflow-x: hidden;
 
     .gallery__location-item {
         border-bottom: 2px solid @border-color;
